# django-selectize

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
demo/: README.md  fixtures.json  manage.py
demo/app1/: admin.py  models.py  tests.py  urls.py  views.py
demo/app1/migrations/: 0001_initial.py
demo/app1/templates/: articles.html  home.html
demo/demo/: settings.py  urls.py
django_selectize/: forms.py
django_selectize/static/django_selectize/: django_selectize.js
example/: db.sqlite3
example/example/: settings.py  urls.py
example/myapp/: forms.py  models.py  urls.py  views.py
example/myapp/migrations/: 0001_initial.py
selectize/: forms.py  forms_select2.py  widgets.py
selectize/templatetags/: selectize_tags.py
