[metadata]
name = django-selectize
version = 2.0
author = Suhail VS
author_email = suhailvs@gmail.com
description = django-selectize is a Django app based on Selectize.js that help you to create Select and Multiselect widgets in Django forms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/djangoer/django-selectize
project_urls =
    Bug Tracker = https://github.com/djangoer/django-selectize/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
	django >= 3.2